--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+body{
+    background-image: url('https://png.pngtree.com/background/20230524/original/pngtree-the-game-of-chess-picture-image_2710450.jpg');
+    background-size: cover;
+}
+
 #gameboard{
-    width: 400px;
-    height:400px;
-  background-color: red;
+    width: 600px;
+    height:600px;
   display: flex;
   flex-wrap: wrap;
   border-radius: 20px;
@@ -13,19 +17,19 @@
     justify-content: center;
 }
 #info-display{
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
     color: #ff0000;
 }
 .turn{
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
     
 }
 
 .square{
-    height: 50px;
-    width: 50px;
+    height: 75px;
+    width: 75px;
     background-color: green;
     position: relative;
 }
@@ -45,8 +49,8 @@
 }
 
 .square svg{
-    width:40px;
-    height:40px;
+    width:60px;
+    height:60px;
     margin:5px;
     position: relative;
     z-index: -9;
